--- a/views/invoice_settings.erb
+++ b/views/invoice_settings.erb
@@ -28,10 +28,11 @@
           </div>
           <div class="block-content">
             <%= render_counters_autosubmit('customer_invoices', 'Factura de cliente') %>
+            <%= render_counters_autosubmit('customer_invoice_payments', 'Abono de factura de cliente') %>
           </div>
         </div>
       </div>
     </div>
-
+    
   </div>
 </div>    
